DialogBox icon DONE

--- a/DialogBox/DialogBox.vcxproj
+++ b/DialogBox/DialogBox.vcxproj
@@ -131,6 +131,11 @@
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="3700482-backpack-bag-book-carryall-knapsack-pack-school_108762.ico" />
+    <Image Include="icon1.ico" />
+    <Image Include="icon2.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
