--- a/DialogBox/DialogBox.vcxproj.filters
+++ b/DialogBox/DialogBox.vcxproj.filters
@@ -29,4 +29,15 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon1.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="icon2.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="3700482-backpack-bag-book-carryall-knapsack-pack-school_108762.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
